# newton-ChysX

./: CHANGELOG.md  _test_sat.py  smoke.txt  smoke_cd.txt  smoke_cs.txt  smoke_mc.txt  smoke_sdf.txt  smoke_sdf2.txt  smoke_static.txt  smoke_tw.txt  smoke_viz.txt  smoke_viz_assert.txt  smoke_viz_long.txt  smoke_viz_xl.txt  test_coupled_simple.py  test_franka_coupled.py
ChysX/: .gitignore  CMakeLists.txt  build_log.txt  profile_output.txt  pyproject.toml
ChysX/chysx/: __init__.py
ChysX/doc/: graph_coloring_analysis.md  graph_coloring_cjp_cc_demo.py  graph_coloring_demo.py
ChysX/docs/: bvh_query_perf_analysis.md  cloth_mesh_collision.md  featherstone_algorithm.md  ik_algorithm.md
ChysX/scenes/: avbd_scenes.cpp  cloth_freefall.cu
ChysX/src/: bindings.cpp
ChysX/src/cloth/: cloth_buffers.h  cloth_simulator.cu  cloth_simulator.h
ChysX/src/collision/: collision_pipeline.cu  collision_pipeline.h  contact_spmv.cu  contact_spmv.h  friction.cuh  mesh_contact.cu  mesh_contact.h  sdf_primitives.cuh  self_collision.cu  self_collision.h  static_contact.cu  static_contact.h  zero_count.h
ChysX/src/collision/bvh/: aabb.cuh  lbvh.h  morton.cuh  quant_bvh.cu  quant_bvh.h
ChysX/src/collision/sdf/: sdf.md  sdf_contact.cu  sdf_contact.h  sdf_volume.cu  sdf_volume.cuh  sdf_volume.h
ChysX/src/constraint/cloth/: bending_constraint.cu  bending_constraint.h  pin_constraint.cu  pin_constraint.h  spring_constraint.cu  spring_constraint.h  triangle_stretch_constraint.cu  triangle_stretch_constraint.h
ChysX/src/constraint/collision/: self_collision_constraint.cu  self_collision_constraint.h  untangle_constraint.h
ChysX/src/constraint/core/: constraint.h  constraint_n.h
ChysX/src/constraint/softbody/: tet_fem_constraint.cu  tet_fem_constraint.h
ChysX/src/coupled/: coupled_simulator.cu  coupled_simulator.h
ChysX/src/ik/: ik_kernels.cuh  ik_lbfgs_solver.cuh  ik_lm_solver.cuh  ik_objectives.cuh  ik_solver.cu  ik_solver.h  ik_types.h
ChysX/src/io/: bgeo_writer.cpp  bgeo_writer.h  obj_io.cpp  obj_io.h  types.h
ChysX/src/math/: quat.cuh
ChysX/src/render/: batch_export.cu  main.cu  scene.cpp  scene.h  viewer.cpp  viewer.h
ChysX/src/rigid/: avbd_kernels.cu  avbd_kernels.cuh  contact_matching.cu  contact_matching.h  graph_coloring.h  narrow_phase.h  rigid_body.h  rigid_broadphase.h  rigid_contact.h  rigid_joint.h  rigid_shape.h  rigid_simulator.h
ChysX/src/rigid/avbd_cpu/: avbd_broadphase_gpu.cu  avbd_broadphase_gpu.h  avbd_collide.cpp  avbd_force.cpp  avbd_gpu_renderer.cu  avbd_gpu_renderer.h  avbd_gpu_solver.cu  avbd_gpu_solver.h  avbd_graph_coloring.cu  avbd_graph_coloring.h  avbd_joint.cpp  avbd_manifold.cpp  avbd_maths.h  avbd_narrowphase_gpu.cu  avbd_narrowphase_gpu.h  avbd_rigid.cpp  avbd_solver.cpp  avbd_solver.h  avbd_spring.cpp
ChysX/src/rigid/featherstone/: featherstone_kernels.cuh  featherstone_solver.cu  featherstone_solver.h  joint_types.cuh  spatial_math.cuh
ChysX/src/rigid/newton_avbd/: avbd_kernels.cuh  contact_matching.cu  contact_matching.h  graph_coloring.cpp  narrow_phase.cu  narrow_phase.h  rigid_body.h  rigid_broadphase.cu  rigid_broadphase.h  rigid_contact.h  rigid_joint.h  rigid_shape.h  rigid_simulator.cu  rigid_simulator.h
ChysX/src/solver/: pcg_solver.cu  pcg_solver.h  vbd_solver.cu  vbd_solver.h
ChysX/src/sparse/: block_csr.cu
newton/: solvers.py
newton/_src/solvers/: __init__.py
newton/_src/solvers/chysx/: __init__.py  solver_chysx.py  solver_chysx_coupled.py  solver_chysx_featherstone.py  solver_chysx_ik.py
newton/examples/cable/: example_cable_pile.py
newton/examples/chysx/: __init__.py  _camera.py  example_chysx_cloth_drop.py  example_chysx_cloth_pin_rain.py  example_chysx_cloth_stack.py  example_chysx_hanging_cloth.py  example_chysx_mesh_drop_test.py  example_chysx_multi_cloth.py  example_chysx_sdf_box.py  example_chysx_sdf_conveyor.py  example_chysx_sdf_franka.py  example_chysx_sdf_gripper.py  example_chysx_sdf_jaw.py  example_chysx_tshirt_drop.py  example_chysx_tshirt_hanging.py  example_chysx_twist.py  example_chysx_untangle.py
newton/examples/chysx/cloth/: example_chysx_cloth_drop.py  example_chysx_freefall.py  example_chysx_rigid_pile.py  example_chysx_sdf_box.py  example_chysx_sdf_conveyor.py  example_chysx_sdf_franka.py  example_chysx_tshirt_drop.py
newton/examples/chysx/softbody/: example_chysx_softbody_franka.py  example_chysx_softbody_hanging.py  example_chysx_softbody_hanging_vbd.py
newton/examples/cloth/: example_cloth_franka.py  example_cloth_poker_cards.py
